<resources>
    <string name="app_name">Rubik\'s Cube Solver</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="camera">Take a picture</string>
    <string name="reset">Reset</string>

    <string name="hint_white">Take a picture of the white face with the red face facing upwards</string>
    <string name="hint_red">Take a picture of the red face with the yellow face facing upwards</string>
    <string name="hint_green">Take a picture of the green face with the yellow face facing upwards</string>
    <string name="hint_orange">Take a picture of the orange face with the yellow face facing upwards</string>
    <string name="hint_blue">Take a picture of the blue face with the yellow face facing upwards</string>
    <string name="hint_yellow">Take a picture of the yellow face with the orange face facing upwards</string>

    <string name="confirm_face">Has the current face been analyzed correctly?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>

    <string name="front">Front</string>
    <string name="front_inv">Front Inv</string>
    <string name="back">Back</string>
    <string name="back_inv">Back Inv</string>
    <string name="up">Up</string>
    <string name="up_inv">Up Inv</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_inv">Bottom Inv</string>
    <string name="left">Left</string>
    <string name="left_inv">Left Inv</string>
    <string name="right">Right</string>
    <string name="right_inv">Right Inv</string>
</resources>
