<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_area1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/hint"
                android:text="@string/hint_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_area2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/btn_take_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_action_camera" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"/>

        </RelativeLayout>

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_below="@id/layout_area1"
            android:layout_above="@id/layout_area2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:id="@+id/innerLayout"
            android:layout_below="@id/layout_area1"
            android:layout_above="@id/layout_area2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cameraRectangleArea"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/camera_rectangle_area"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/previewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#dd000000"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/previewFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp">
            </RelativeLayout>

            <TextView
                android:id="@+id/confirmTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_face"
                android:textSize="20dp"
                android:textColor="#fff"
                android:layout_below="@id/previewFace"
                android:layout_marginTop="50dp"/>

            <Button
                android:id="@+id/confirmYesBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_yes"
                android:layout_below="@id/confirmTxtView"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"/>

            <Button
                android:id="@+id/confirmNoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_no"
                android:layout_below="@id/confirmTxtView"
                android:layout_alignParentLeft="true"
                android:layout_margin="20dp"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>